fix: set modal z-index to 6(#master)

--- a/components/popover/modal/modal.module.scss
+++ b/components/popover/modal/modal.module.scss
@@ -1,6 +1,6 @@
 .modal {
   position: fixed;
-  z-index: 5;
+  z-index: 6;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
